<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/espresso_home_type_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_text" />

    <Button
        android:id="@+id/espresso_home_spinner_selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_selection" />

    <Button
        android:id="@+id/espresso_home_custom_list_adapter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_list_adapter" />

    <Button
        android:id="@+id/espresso_home_search_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_view" />

    <Button
        android:id="@+id/espresso_home_action_bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actionbar" />

    <Button
        android:id="@+id/espresso_home_viewpager_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager" />

    <Button
        android:id="@+id/espresso_home_dialogs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogs" />

    <Button
        android:id="@+id/espresso_home_recycler_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view" />

    <Button
        android:id="@+id/espresso_home_pickers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time_pickers" />


</LinearLayout>