<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Button
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/toggle_button_start"
        android:onClick="toggle"/>
    <TextView
        android:id="@+id/elapsed_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="65432 ms"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/success"/>
</LinearLayout>